syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "CommonEmailProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Email Template Setting
message EmailTemplateSettingFlatData {
    option (routines.entity_type) = "EmailTemplateSetting";
    option (routines.keys).keys = "email_template_setting_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: emailTemplateSettingId
    string email_template_setting_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string email_type = 2 [(routines.opts).field_type = "id"];
    string description = 3 [(routines.opts).field_type = "description"];
    string body_screen_location = 4 [(routines.opts).field_type = "long-varchar"];
    string xslfo_attach_screen_location = 5 [(routines.opts).field_type = "long-varchar"];
    string from_address = 6 [(routines.opts).field_type = "email"];
    string cc_address = 7 [(routines.opts).field_type = "email"];
    string bcc_address = 8 [(routines.opts).field_type = "email"];
    string subject = 9 [(routines.opts).field_type = "comment"];
    string content_type = 10 [(routines.opts).field_type = "long-varchar"];
    google.protobuf.Timestamp last_updated_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 12 [(routines.opts).field_type = "date-time"];
    string tenant_id = 13 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17 ;
}

message EmailTemplateSettingKey{
    string email_template_setting_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message EmailTemplateSettingList{
    repeated EmailTemplateSettingFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListEmailTemplateSettings` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

