syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "StoreOpsProto";

package facade;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "routines.proto";
import "facade_common.proto";


import "ents/product_store.proto";

service StoreOperations {
  rpc CreateStore(CreateStoreParams) returns (domain.ProductStoreFlatData) {}
  rpc UpdateStore(UpdateStoreParams) returns (domain.ProductStoreFlatData) {}
  rpc GetStore(BundleGetRequest) returns (domain.ProductStoreFlatData) {}

  
  rpc AddProductStorePromoAppl(AddProductStorePromoApplParams) returns (routines.Response) {}
  rpc UpdateProductStorePromoAppl(UpdateProductStorePromoApplParams) returns (routines.Response) {}
  rpc RemoveProductStorePromoAppl(RemoveProductStorePromoApplParams) returns (routines.Response) {}
  
  rpc AddProductStoreEmailSetting(AddProductStoreEmailSettingParams) returns (routines.Response) {}
  rpc UpdateProductStoreEmailSetting(UpdateProductStoreEmailSettingParams) returns (routines.Response) {}
  rpc RemoveProductStoreEmailSetting(RemoveProductStoreEmailSettingParams) returns (routines.Response) {}
  
  rpc AddProductStoreFacility(AddProductStoreFacilityParams) returns (routines.Response) {}
  rpc UpdateProductStoreFacility(UpdateProductStoreFacilityParams) returns (routines.Response) {}
  rpc RemoveProductStoreFacility(RemoveProductStoreFacilityParams) returns (routines.Response) {}
  
  rpc AddProductStorePaymentSetting(AddProductStorePaymentSettingParams) returns (routines.Response) {}
  rpc UpdateProductStorePaymentSetting(UpdateProductStorePaymentSettingParams) returns (routines.Response) {}
  rpc RemoveProductStorePaymentSetting(RemoveProductStorePaymentSettingParams) returns (routines.Response) {}
  
  rpc AddProductStoreKeywordOvrd(AddProductStoreKeywordOvrdParams) returns (routines.Response) {}
  rpc UpdateProductStoreKeywordOvrd(UpdateProductStoreKeywordOvrdParams) returns (routines.Response) {}
  rpc RemoveProductStoreKeywordOvrd(RemoveProductStoreKeywordOvrdParams) returns (routines.Response) {}
  
  rpc AddProductStoreCatalog(AddProductStoreCatalogParams) returns (routines.Response) {}
  rpc UpdateProductStoreCatalog(UpdateProductStoreCatalogParams) returns (routines.Response) {}
  rpc RemoveProductStoreCatalog(RemoveProductStoreCatalogParams) returns (routines.Response) {}
  
  rpc AddProductStoreRole(AddProductStoreRoleParams) returns (routines.Response) {}
  rpc UpdateProductStoreRole(UpdateProductStoreRoleParams) returns (routines.Response) {}
  rpc RemoveProductStoreRole(RemoveProductStoreRoleParams) returns (routines.Response) {}
  

  // -- relations: one --

  // -- extensions --
  

    // -- query --
  rpc QueryAll(BundleHandle) returns (domain.ProductStoreList) {}
  rpc QueryIds(BundleHandle) returns (routines.Strings) {}
  rpc QueryList(BundleQueryMap) returns (domain.ProductStoreList) {}
  rpc QueryOne(BundleQueryMap) returns (domain.ProductStoreFlatData) {}
  rpc Select(BundleHandle) returns (domain.ProductStoreList) {}

  rpc ListProductStores(BundleListRequest) returns (domain.ProductStoreList) {}
  rpc LoadProductStores(BundleIdsRequest) returns (domain.ProductStoreList) {}
  rpc StreamProductStores(BundleListRequest) returns (stream domain.ProductStoreList) {}
  rpc RemoveProductStore(BundleDeleteRequest) returns (routines.Response) {}
}


// Mutations for main entity

message CreateStoreParams{
  BundleHandle handle = 1;
  domain.ProductStoreFlatData productStore = 2;
  string comment = 3;
}

message UpdateStoreParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreFlatData productStore = 3;
  string comment = 4;
}


// Mutations for ProductStorePromoAppl

message AddProductStorePromoApplParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStorePromoApplData data = 3;
  string comment = 4;
}

message UpdateProductStorePromoApplParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStorePromoApplData data = 3;
  string comment = 4;
}

message RemoveProductStorePromoApplParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreEmailSetting

message AddProductStoreEmailSettingParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreEmailSettingData data = 3;
  string comment = 4;
}

message UpdateProductStoreEmailSettingParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreEmailSettingData data = 3;
  string comment = 4;
}

message RemoveProductStoreEmailSettingParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreFacility

message AddProductStoreFacilityParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreFacilityFlatData data = 3;
  string comment = 4;
}

message UpdateProductStoreFacilityParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreFacilityFlatData data = 3;
  string comment = 4;
}

message RemoveProductStoreFacilityParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStorePaymentSetting

message AddProductStorePaymentSettingParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStorePaymentSettingData data = 3;
  string comment = 4;
}

message UpdateProductStorePaymentSettingParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStorePaymentSettingData data = 3;
  string comment = 4;
}

message RemoveProductStorePaymentSettingParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreKeywordOvrd

message AddProductStoreKeywordOvrdParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreKeywordOvrdData data = 3;
  string comment = 4;
}

message UpdateProductStoreKeywordOvrdParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreKeywordOvrdData data = 3;
  string comment = 4;
}

message RemoveProductStoreKeywordOvrdParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreCatalog

message AddProductStoreCatalogParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreCatalogFlatData data = 3;
  string comment = 4;
}

message UpdateProductStoreCatalogParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreCatalogFlatData data = 3;
  string comment = 4;
}

message RemoveProductStoreCatalogParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreRole

message AddProductStoreRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreRoleData data = 3;
  string comment = 4;
}

message UpdateProductStoreRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreRoleData data = 3;
  string comment = 4;
}

message RemoveProductStoreRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

