syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "EbayShippingExtraProto";
option objc_class_prefix = "EbayShippingExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// Ebay Shipping Method Config
message EbayShippingMethodData {
    option (routines.entity_type) = "EbayShippingMethod";
    option (routines.keys).keys = "shipment_method_name, product_store_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shipmentMethodName, productStoreId
    // fields
        
    string shipment_method_name = 1 [json_name = "shipment_method_name"];    
    string product_store_id = 2 [json_name = "product_store_id"];    
    routines.Currency amount = 3 [json_name = "amount"];    
    routines.Currency additional_amount = 4 [json_name = "additional_amount"];    
    routines.FixedPoint additional_percent = 5 [json_name = "additional_percent"];
    string method_type_enum_id = 6 [json_name = "method_type_enum_id"]; // Enumeration    
    string carrier_party_id = 7 [json_name = "carrier_party_id"];    
    string shipment_method_type_id = 8 [json_name = "shipment_method_type_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 10 [json_name = "created_tx_stamp"];    
    string id = 11 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message EbayShippingMethodList{
    repeated EbayShippingMethodData values=1;
}


